# vulkan-rendering-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
engine/: CMakeLists.txt  shader.frag
engine/cfg/: shaders.hpp
engine/include/: constants.hpp  exceptions.hpp  object.hpp  transform.hpp  vertex.hpp  window.hpp
engine/include/backend/: allocation.hpp  allocator.hpp  command_pool.hpp  descriptor_pool.hpp  device_manager.hpp  image_allocation.hpp  pipeline_configuration.hpp  swapchain.hpp  vulkan_backend.hpp
engine/include/drawables/: GouraudMesh.hpp  drawing_context.hpp
engine/include/gui/: applet.hpp  imgui_manager.hpp
engine/include/input/: keyboard.hpp  mouse.hpp
engine/include/reflection/: datastructure.hpp  fieldtype.hpp
engine/src/: logger.cpp  object.cpp  window.cpp
engine/src/backend/: allocator.cpp  command_pool.cpp  descriptor_pool.cpp  device_manager.cpp  image_allocation.cpp  instance_manager.cpp  swapchain.cpp  vk_result.cpp  vulkan_backend.cpp
engine/src/drawables/: GouraudMesh.cpp
engine/src/gui/: applet.cpp  imgui_manager.cpp
render/: CMakeLists.txt  shader.vert
render/include/: constants.hpp  device_manager.hpp  drawable.hpp  exceptions.hpp  instance_manager.hpp  object.hpp  render_backend.hpp  render_manager.hpp  transform.hpp  version.hpp  vertex.hpp  window.hpp
render/include/backend/: descriptor_pool.hpp  device_manager.hpp  instance_manager.hpp  vertex_description.hpp
render/include/drawables/: GouraudMesh.hpp  drawing_context.hpp
render/include/input/: controller.hpp
render/src/: device_manager.cpp  device_manager.hpp  exceptions.cpp  instance_manager.cpp  instance_manager.hpp  logger.hpp  render_manager.cpp  render_manager.hpp  vertex_description.hpp  vk_result.cpp  vk_result.hpp  vk_result_to_string.cpp  vk_result_to_string.hpp  vma_impl.cpp  vulkan_backend.cpp  vulkan_backend.hpp  window.cpp
render/src/backend/: allocation.hpp  allocator.cpp  descriptor_pool.cpp  device_manager.cpp  instance_manager.cpp  vk_result.cpp  vulkan_backend.cpp  vulkan_backend.hpp
render/src/drawables/: DrawingContext.hpp  GouraudMesh.cpp  GouraudMesh.hpp
runtime/: CMakeLists.txt  Cube.cpp  Cube.hpp  CubeMutator.cpp  CubeMutator.hpp  HintBox.cpp  HintBox.hpp  ObjectMutator.cpp  ObjectMutator.hpp  RuntimeInfo.cpp  RuntimeInfo.hpp  main.cpp
tools/: Cargo.toml
tools/bintool/: Cargo.toml
tools/bintool/src/: error.rs  main.rs
tools/compshdr/: Cargo.toml
tools/compshdr/src/: cli.rs  error.rs  main.rs
